# effortless-insight-ai-service

./: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 001_create_embeddings.py  002_create_processing_jobs.py  003_create_knowledge_base.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/endpoints/: admin.py  embeddings.py  health.py  process.py
app/api/middleware/: __init__.py  auth.py  error_handler.py  logging.py  metrics.py
app/core/: config.py  database.py  exceptions.py  log_config.py
app/models/: __init__.py  base.py  embedding.py  knowledge_base.py  processing_job.py
app/schemas/: __init__.py  entities.py  internal.py  report.py  requests.py  responses.py
app/services/: embedding_service.py  llm_service.py  ocr_service.py
app/services/extraction/: __init__.py  amount_extractor.py  date_parser.py  entity_extractor.py  gstin_validator.py  patterns.py
app/services/image/: __init__.py  pdf_splitter.py  preprocessor.py  quality_assessor.py
app/services/llm/: __init__.py  analyzer.py  classifier.py  client.py  notice_patterns.py  prompts.py  (+1 more)
app/utils/: __init__.py  circuit_breaker.py  http_client.py  retry.py  token_counter.py
scripts/: seed_knowledge_base.py
tests/: __init__.py  conftest.py
tests/e2e/: test_notice_processing.py
tests/integration/: test_pipeline.py
tests/unit/: test_core.py  test_middleware.py  test_models.py  test_schemas.py  test_utils.py
(+25 files in other folders)
